# satisfactory-solver

./: CMakeLists.txt  building.txt  data.cpp  data.hpp  demo.txt  integer.cpp  integer.hpp  integer_test.cpp  main.cpp  objectives.txt  parser.cpp  parser.hpp  rational.cpp  rational.hpp  solver.cpp  solver.hpp  table.hpp
